# config.phundrak.com

./: .#README.org  .Xresources  .drone.yml  .emacs.d  .gitattributes  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .gnus.el  .nanorc  .prettierrc.json  .profile  .rustfmt.toml  .sbclrc  .signature  .spacemacs  .tmux.conf  .tmux.conf.local  .xinitrc  .xinitrc##yadm.j2  .xinitrc.emacs  .xinitrc.stumpwm  .yarnrc.yml  .zshrc  CODE_OF_CONDUCT.md  LICENSE.org  README.md  README.org  config.fish  devenv.nix  eshell-alias  export.el  img  installation.org  nanorc.org  package-lock.json  package.json  shell.nix  spacemacs.org  (+2 more)
.config/: clight.conf  compton.conf  mimeapps.list  redshift.conf  topgrade.toml
.config/.ncmpcpp/: bindings  config
.config/bat/: config
.config/chemacs/: profile  profiles.el
.config/dunst/: dunstrc
.config/emacs/: eshell-alias
.config/emacs/private/: conlanging  dired-phundrak  eshell-alias  w3m
.config/fish/: README.org  config.fish  config.org
.config/fish/functions/: 4chandl.fish  cnew.fish  cppnew.fish  mcd.fish  mkcd.fish  rainymood.fish  we.fish
.config/git/: config
.config/gtk-3.0/: settings.ini
.config/i3/: README.org  config  config##Linux.Gampo  config##Linux.Marpa  config##yadm.j2
.config/kitty/: kitty.conf
.config/mpd/: mpd.conf  sticker.sql
.config/mpv/: input.conf  mpv.conf
.config/ncmpcpp/: config
.config/neofetch/: config.conf
.config/newm/: config.py
.config/polybar/: config  config##Linux.Marpa  config##yadm.j2  launch.sh
.config/qutebrowser/: completion.py  config.py  content.py  downloads.py  editor.py  fileselect.py  hints.py  input.py  keybinds.py  nord.py  statusbar.py  tabs.py  url.py  window.py
.config/ranger/: rc.conf  scope.sh
.config/rofi/: config  config.rasi  nord.rasi  wifi
.config/sway/: config
.config/sxiv/exec/: key-handler
.config/systemd/user/: mpd-mpris.service  pipewire-input-filter-chain.service  playerctl.service  pumopm.service
.config/yadm/: bootstrap  encrypt  files.gpg
.config/yay/: config.json
.config/zathura/: zathurarc
.emacs.d/: eshell-alias
.emacs.d/private/: eshell-alias
.emacs.d/private/snippets/org-mode/: attr_html  attr_latex  comment_block  emacs-lisp  python
.emacs.spacemacs/private/: conlanging  eshell-alias
.emacs.vanilla/: early-init.el  init.el
.etc/ly/: config.ini
.gitea/workflows/: deploy.yaml  test.yaml
.github/workflows/: deploy.yaml
.gnupg/: gpg.conf
.local/share/applications/: FlowScape.desktop  OtherWorldMapper.desktop  Wonderdraft.desktop  emacs.desktop  gnus.desktop  mu4e.desktop  x-gnus.desktop
.local/share/yadm/: archive
.yadm/: bootstrap  encrypt  files.gpg
Documents/code/AUR/Wonderdraft/: PKGBUILD
Documents/code/AUR/emacs/: PKGBUILD
Documents/code/AUR/org-mode/: PKGBUILD
Documents/code/AUR/pumopm-git/: PKGBUILD
arch/pkgbuilds/emacs-native-comp/: PKGBUILD
code/PKGBUILDs/NextcloudTalk/: PKGBUILD  nextcloud-talk.desktop
code/PKGBUILDs/appwrite-cli/: PKGBUILD
code/PKGBUILDs/eask/: PKGBUILD
code/PKGBUILDs/emacs/: PKGBUILD
code/PKGBUILDs/nodejs-appwrite/: PKGBUILD
code/PKGBUILDs/nsxiv/: PKGBUILD  config.h
code/PKGBUILDs/pumopm-bin/: PKGBUILD
dev/conan-project/: CMakeLists.txt  README.org  conanfile.py
dev/conan-project/doc/: Doxyfile
dev/conan-project/tests/: tests.cc
dev/fishfunctions/: cnew.man  cnew.org  cppnew.man  cppnew.org
dev/templateC/: .gitignore  CMakeLists.txt  README.org
dev/templateC++/: .clang-format  CMakeLists.txt  Makefile  README.org
dev/templateC++/src/: main.cc
dev/templateC/cmake/: functions.cmake
dev/templateC/doc/: Doxyfile
dev/templateC/src/: main.c
docs/: .dir-locals.el  README.org  about.org  bootstrap.org  desktop.org  fish.org  git.org  headers  hyprland.org  mpd.org  neofetch.org  picom.org  rustfmt.org  scripts.org  shell.org  stumpwm.org  tmux.org
docs/.vuepress/: client.ts  config.ts  head.ts
docs/.vuepress/components/: ImgFigure.vue
docs/.vuepress/public/: browserconfig.xml
docs/.vuepress/styles/: index.scss
docs/deprecated/: awesome.org  bootstrap.org  i3.org  index.org  nano.org  polybar.org  spacemacs.org
docs/emacs/: basic-config.org  custom-elisp.org  img  index.org  keybinding-managers.org  keybindings.org  package-manager.org
docs/stumpwm/: colours.org  commands.org  groups.org  index.org  init.org  keybindings.org  mode-line.org  theme.org  utilities.org
fishfunctions/: 4chandl.fish  backup.fish  cnew.fish  cppnew.fish  mcd.fish  we.fish
org/capture/: birthday.orgcaptmpl  email.orgcaptmpl  event.orgcaptmpl  health.orgcaptmpl  informatique.orgcaptmpl  journal.orgcaptmpl  notes-quote.orgcaptmpl  notes.orgcaptmpl  protocol-link.orgcaptmpl  protocol.orgcaptmpl  resource.orgcaptmpl  youtube.orgcaptmpl
org/config/: .dir-locals.el  LICENSE.md  awesome.org  bin.org  bootstrap.org  desktop.org  emacs.org  fish.org  git.org  headers  headers.org  headers.tex  i3.org  index.html  index.org  installation.org  mpd.org  nano.org  ncmpcpp.org  neofetch.html  neofetch.org  picom.org  polybar.org  rustfmt.org  sitemap.org  spacemacs.org  stumpwm.org  tmux.org
org/config-website/: bin.org  fish.org  headers.org  i3.org  img  index.org  installation.org  polybar.org  sitemap.org  spacemacs.org  tmux.org
org/config/Deprecated/: awesome.org  i3.org  nano.org  polybar.org  spacemacs.org
org/config/WIP/: ncmpcpp.org  neofetch.org
spacemacs-layers/conlanging/: README.org  funcs.el  packages.el
xresources/: .Xresources
(+20 files in other folders)
